--- a/LyapDraft.tex
+++ b/LyapDraft.tex
@@ -883,7 +883,7 @@ If we integrate and assume we start from rest $\dot X_0 = 0$, we can write this 
 \begin{align}\label{Eq:Ineq2}
  D_h(x, Z_t) \leq \int_0^t\frac{d}{ds}\left\{e^{\beta_s}\right\}  [f(X_s)+ \langle \nabla f(X_s), x - X_s \rangle]ds  -  e^{ \beta_t}  f(X_t) + e^{\beta_0} f(X_0) + D_h(x, X_0).
 \end{align}
-Now, by pattern matching, we can use this inequality to extract a continuous time estimate sequence. 
+Now, by pattern matching, we can use this inequality to extract a continuous-time estimate sequence. 
 %Notice, since $A_0 = 1$, we can write \eqref{Eq:Ineq1} as,
 %\begin{align*}
 %\phi_k(x) \leq \Big(1 - \frac{A_0}{A_k}\Big)f(x) + \frac{A_0}{A_k}\phi_0(x).
@@ -908,7 +908,7 @@ then the above discussion shows that $\{\phi_t(x), e^{\beta_t}\}$ is a continuou
 %
 %
 \subsubsection{Conditional Gradient Method} 
-\paragraph{Continuous time Estimate Sequence}
+\paragraph{Continuous-time Estimate Sequence}
 For the conditional gradient method, the algorithm simply needed to ensure,
 \begin{align}\label{Eq:InEq4}
 0 &\leq \int_0^t\frac{d}{ds}\left\{e^{\beta_s}\right\}  [f(X_s)+ \langle \nabla f(X_s), x - X_s \rangle] -  \frac{d}{ds}\left\{ e^{ \beta_s}  f(X_s)\right\}\,ds
@@ -921,7 +921,7 @@ From the derivation of the Lypaynov function, we can conclude
 \begin{align*}
 e^{\beta_t} f(X_t) \leq  (e^{\beta_t} - e^{\beta_0}) f(x) + e^{\beta_0}f(X_0).
 \end{align*}
-which shows that $\{f(X_t),e^{\beta_t}\}$ is a continuous-time estimate sequence for this method. In Appendix~\ref{App:EstSeq}, we show the equivalence in discrete-time between estimate sequences and our Lyapunov framework in this setting.
+which shows that $\{f(X_t),e^{\beta_t}\}$ is a continuous-time estimate sequence for this method. In Appendix~\ref{App:EstSeq}, we show the equivalence in discrete time between estimate sequences and our Lyapunov framework in this setting.
 %
 
 %
@@ -950,30 +950,25 @@ e^{\beta_t} f(X_t) + e^{\beta_t}\frac{\mu}{2} \|x - Z_t\|^2 \leq (e^{\beta_t} - 
 and hence \begin{align*}
 \{f(X_t) + \frac{\mu}{2} \|x - Z_t\|^2, e^{\beta_t}\},
 \end{align*}
-is a continuous time estimate sequence. In Appendix~\ref{App:EstSeq}, we show the equivalence in discrete-time between estimate sequences and our Lyapunov framework in this setting.
+is a continuous-time estimate sequence. In Appendix~\ref{App:EstSeq}, we show the equivalence in discrete time between estimate sequences and our Lyapunov framework in this setting.
 
-\section{Discussion and future work}
+\section{Discussion}
 In this paper, we have presented a Lyapunov framework for analyzing several method used in optimization. We showed that a single family of Lyapunov functions can be used to verify the convergence rates of a variety of momentum methods, making Polyak's original physical intuition rigorous.  We demonstrated that convergence rates could be understood as the consequence of discretization errors incurred when passing from continuous to discrete time.  Consistently, implicit discretization schemes result in harder subproblems for algorithms, but provide an almost exact approximation of the continuous-time dynamics.   On the other hand, when explicit discretization schemes are used, the algorithms incur discretization error, and require assumptions about the problem instance to guarantee good convergence properities.
 
-We believe this framework is general for optimization, and aim to investigate how to extend these methods in a variety of directions. We close this paper with some of these possible directions for future work.
+We close with a discussion of some possible directions for future work.
 
-\subsection{Other discretization methods}  Requiring that the continuous time Lyapunov function remain a Lyapunov function in discrete time places significant constraints on which ODE solvers can be used.  In this paper, we show that we can derive a few new algorithms using a restricted set of ODE techniques, but it remains to be seen if other methods can be analyzed.  Techniques such as the midpoint method and Runge Kutta provide more accurate solutions of ODEs than Euler methods~\cite{Butcher20001}.  Is it possible to analyze such techniques as optimization methods?  We expect that these methods do not achieve better asymptotic convergence rates, but may inherit additional favorable properties.  Determining the advantages of such schemes could provide more robust optimization techniques in certain scenarios.
+Requiring that the continuous-time Lyapunov function remain a Lyapunov function in discrete time places significant constraints on which ODE solvers can be used.  In this paper, we show that we can derive new algorithms using a restricted set of ODE techniques, but it remains to be seen if other methods can be analyzed.  Techniques such as the midpoint method and Runge Kutta provide more accurate solutions of ODEs than Euler methods~\cite{Butcher20001}.  Is it possible to analyze such techniques as optimization methods?  We expect that these methods do not achieve better asymptotic convergence rates, but may inherit additional favorable properties.  Determining the advantages of such schemes could provide more robust optimization techniques in certain scenarios.
 
+Several restart schemes have been suggested for the strongly convex setting based on the momentum dynamics~\eqref{Eq:ELBreg}. In many settings,  while the Lipschitz parameter can be estimated using backtracking line-search, the strong convexity parameter is often hard---if not impossible---to estimate~\cite{SuBoydCandes15}.  Therefore, many~\cite{ODonoghue15,SuBoydCandes15,Krichene15} have developed heuristics to empirically speed up the convergence rate of the ODE (or discrete-time algorithm), based on model misspecification. In particular, both Su, Boyd, and Candes~\cite{SuBoydCandes15} and Krinchene, Bayen and Bartlett~\cite{Krichene15} develop restart schemes designed for the strongly convex setting based on the momentum dynamics~\eqref{Eq:ELBreg}. Our analysis suggests that restart schemes based on the dynamics~\eqref{Eq:StrongDyn} might lead to better results. 
 
-\subsection{Restart Schemes}
-Several restart schemes have been suggested for the strongly convex setting based on the momentum dynamic~\eqref{Eq:ELBreg}. In many settings,  while the Lipschitz parameter can be estimated using backtracking line-search, the strong convexity parameter is often hard -- if not impossible -- to estimate~\cite{SuBoydCandes15}.  Therefore, many~\cite{ODonoghue15,SuBoydCandes15,Krichene15} have developed heuristics to empirically speed up the convergence rate of the ODE (or discrete-time algorithm), based on model misspecification. In particular, both Su, Boyd, and Candes~\cite{SuBoydCandes15} and Krinchene, Bayen and Bartlett~\cite{Krichene15} develop restart schemes designed for the strongly convex setting based on the momentum dynamic~\eqref{Eq:ELBreg}. Our analysis suggests that restart schemes based on the dynamic~\eqref{Eq:StrongDyn} might lead to better results. 
-
-\subsection{Further Extensions}
-As mentioned in Section~\ref{Sec:StrongConv}, the dynamic~\eqref{Eq:StrongDyn} developed for the setting when $f$ is strongly convex can be viewed variationally, as the Euler-Lagrange equation for a different Lagrangian functional. %A quick check shows that it is the Euler-Lagrange equation for the following Lagrangian
+As mentioned in Section~\ref{Sec:StrongConv}, the dynamics~\eqref{Eq:StrongDyn} developed for the setting when $f$ is strongly convex can be viewed variationally, as the Euler-Lagrange equation for a different Lagrangian functional. %A quick check shows that it is the Euler-Lagrange equation for the following Lagrangian
 %\begin{equation}\label{Eq:LagStrongConv}
 %\mathcal{L}(x, \dot x, t) = \dot \beta_t e^{2\beta_t} \left(\frac{\mu}{2}\left\|\frac{\dot x}{\dot \beta_t}\right\|^2 - f(x)\right)
 %\end{equation}
-While outside the scope of this paper, the Lagrangian~\eqref{Eq:LagStrongConv} can be generalized to a non-Euclidean setting. In follow-up work, we study this second Lagrangian family and its properties further. A natural question this research raise is whether the 
-the Lyapunov analysis introduced in this paper can be extended other settings, such as accelerated coordinate ascent~\cite{Zeyuan16} and stochastic gradient descent, and whether a dynamical perspective can be developed in these settings. In future work, we explore these questions further.  %. Preliminary results suggests that this extension is indeed possible. %In followup work, we will present these extensions. 
+While outside the scope of this paper, the Lagrangian~\eqref{Eq:LagStrongConv} can be generalized to a non-Euclidean setting. In follow-up work, we plan to study this second Lagrangian family and its properties further. A natural question this research raise is whether the 
+the Lyapunov analysis introduced in this paper can be extended other settings, such as accelerated coordinate ascent~\cite{Zeyuan16} and stochastic gradient descent, and whether a dynamical perspective can be developed in these settings.  %. Preliminary results suggests that this extension is indeed possible. %In followup work, we will present these extensions. 
 %Of particular interest will be understanding the dynamical perspective these extensions potentially provide when randomness is introduced to~\eqref{Eq:EL} and~\eqref{Eq:StrongDyn}. %Furthermore, recently there has been several connections made between optimization and sampling schemes~\cite{ }
 
-
-\subsection{Searching for invariants}
 Earlier work by Drori and Teboulle~\cite{DroriTeboulle13}, Kim and Fessler~\cite{Kim2016}, Taylor \emph{et al}~\cite{Taylor2016}, and Lessard~\emph{et al}~\cite{Lessard14} have shown that optimization algorithms could be analyzed by solving convex programming problems.  In particular, Lessard~\emph{et al} show that Lyapunov-like potential functions called \emph{integral quadratic constraints} can be found by solving a constant-sized semidefinite programming problem. It would be interesting to see if these results can be adapted to directly search for Lyapunov functions like those studied in this paper.  This would provide a method to automate the analysis of new techniques, possibly moving beyond momentum methods to novel families of optimization techniques.
 \section*{Acknowledgements}
 We would like to give special thanks to Andre Wibisono for the many helpful discussion involving this paper. We would also like to thank Orianna Demassi for her very useful feedback and Stephen Tu who caught a small error in a previous version of this paper.
